<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_muvie"
            android:icon="@drawable/muvie_icon"
            android:title="@string/muvie" />
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/live_icon"
            android:title="@string/live" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/log_icon"
            android:title="@string/vlog"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite_icon"
            android:title="@string/favorites" />
        <!--item
            android:id="@+id/nav_tools"
            android:icon="@drawable/share_icon"
            android:title="@string/menu_tools" /-->
    </group>

    <item android:title="Social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_remove_ad"
                android:icon="@drawable/remove_ad"
                android:title="@string/remove_ad" />
        </menu>
    </item>

</menu>
